--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -21,12 +21,12 @@
         <table class="table table-instances">
             <thead class="thead-inverse">
                 <tr>
+                    <th>{% trans "Time" %}</th>
                     <th>{% trans "Child" %}</th>
                     <th class="text-center">{% trans "Wet" %}</th>
                     <th class="text-center">{% trans "Solid" %}</th>
                     <th>{% trans "Color" %}</th>
                     <th>{% trans "Amount" %}</th>
-                    <th>{% trans "Time" %}</th>
                     <th class="text-center">{% trans "Actions" %}</th>
                 </tr>
             </thead>
@@ -34,12 +34,12 @@
                 {% for change in object_list %}
                     {% cycle "odd" "even" as row_class silent %}
                     <tr class="{{ row_class }}">
-                        <th scope="row"><a href="{% url 'core:child' change.child.slug %}">{{ change.child }}</a></th>
+                        <th scope="row">{{ change.time }}</th>
+                        <td><a href="{% url 'core:child' change.child.slug %}">{{ change.child }}</a></td>
                         <td class="text-center">{{ change.wet|bool_icon }}</td>
                         <td class="text-center">{{ change.solid|bool_icon }}</td>
                         <td>{{ change.get_color_display }}</td>
                         <td>{{ change.amount|default_if_none:"" }}</td>
-                        <td>{{ change.time }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
 
