--- a/core/templates/core/temperature_list.html
+++ b/core/templates/core/temperature_list.html
@@ -21,9 +21,9 @@
         <table class="table table-instances">
             <thead class="thead-inverse">
                 <tr>
+                    <th>{% trans "Time" %}</th>
                     <th>{% trans "Child" %}</th>
                     <th>{% trans "Temperature" %}</th>
-                    <th>{% trans "Time" %}</th>
                     <th class="text-center">{% trans "Actions" %}</th>
                 </tr>
             </thead>
@@ -31,9 +31,9 @@
                 {% for temperature in object_list %}
                     {% cycle "odd" "even" as row_class silent %}
                     <tr class="{{ row_class }}">
-                        <th scope="row"><a href="{% url 'core:child' temperature.child.slug %}">{{ temperature.child }}</a></th>
+                        <th scope="row">{{ temperature.time }}</th>
+                        <td><a href="{% url 'core:child' temperature.child.slug %}">{{ temperature.child }}</a></td>
                         <td>{{ temperature.temperature }}</td>
-                        <td>{{ temperature.time }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
 
