--- a/core/templates/core/tummytime_list.html
+++ b/core/templates/core/tummytime_list.html
@@ -20,10 +20,10 @@
         <table class="table table-striped table-hover">
             <thead class="thead-inverse">
                 <tr>
-                    <th>{% trans "Child" %}</th>
-                    <th>{% trans "Duration" %}</th>
                     <th>{% trans "Start" %}</th>
                     <th>{% trans "End" %}</th>
+                    <th>{% trans "Child" %}</th>
+                    <th>{% trans "Duration" %}</th>
                     <th>{% trans "Milestone" %}</th>
                     <th class="text-center">{% trans "Actions" %}</th>
                 </tr>
@@ -31,10 +31,10 @@
             <tbody>
                 {% for tummytime in object_list %}
                     <tr>
-                        <th scope="row"><a href="{% url 'core:child' tummytime.child.slug %}">{{ tummytime.child }}</a></th>
-                        <td>{{ tummytime.duration|duration_string }}</td>
-                        <td>{{ tummytime.start }}</td>
+                        <th scope="row">{{ tummytime.start }}</th>
                         <td>{{ tummytime.end }}</td>
+                        <td><a href="{% url 'core:child' tummytime.child.slug %}">{{ tummytime.child }}</a></td>
+                        <td>{{ tummytime.duration|duration_string }}</td>
                         <td>{{ tummytime.milestone }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
