Brighten blue and cyan colors
For slightly easier viewing on mobile phones in daylight

--- a/babybuddy/static_src/scss/themes/blueorange.scss
+++ b/babybuddy/static_src/scss/themes/blueorange.scss
@@ -4,7 +4,7 @@
 // Color system
 //
 
-$blue: #226f97;
+$blue: #37abe9;
 $indigo: #472395;
 $purple: #712395;
 $pink: #952393;
@@ -13,7 +13,7 @@ $orange: #ff8f00;
 $yellow: #ffbe42;
 $green: #239556;
 $teal: #5abccc;
-$cyan: #15b2d3;
+$cyan: #44c4dd;
 
 $theme-colors: (
     primary: $blue,
