Only use full width submit on smaller screens

--- a/babybuddy/templates/babybuddy/form.html
+++ b/babybuddy/templates/babybuddy/form.html
@@ -8,6 +8,6 @@
                 {% include 'babybuddy/form_field.html' %}
             </div>
         {% endfor %}
-        <button type="submit" class="btn btn-primary btn-block btn-lg p-3 fixed-bottom">{% trans "Submit" %}</button>
+        <button type="submit" class="submit-primary btn btn-primary btn-lg">{% trans "Submit" %}</button>
     </form>
 </div>
