--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -21,6 +21,7 @@
         {% card_sleep_day object %}
         {% card_sleep_naps_day object %}
         {% card_tummytime_day object %}
+        {% card_music_last object %}
         {% card_diaperchange_types object %}
     </div>
 {% endblock %}
