--- a/core/templates/core/timer_nav.html
+++ b/core/templates/core/timer_nav.html
@@ -11,9 +11,14 @@
     </a>
     <div class="dropdown-menu" aria-labelledby="nav-timer-menu-link">
         {% if perms.core.add_timer %}
-            <a class="dropdown-item" href="{% url 'core:timer-add-quick' %}">
-                <i class="icon icon-timer" aria-hidden="true"></i> {% trans "Quick Start Timer" %}
-            </a>
+            <div class="dropdown-item">
+                <form action="{% url 'core:timer-add-quick' %}" role="form" method="post" class="d-inline">
+                    {% csrf_token %}
+                    <button class="btn text-left p-0">
+                        <i class="icon icon-timer" aria-hidden="true"></i> {% trans "Quick Start Timer" %}
+                    </button>
+                </form>
+            </div>
             <a class="dropdown-item" href="{% url 'core:timer-add' %}">
                 <i class="icon icon-add" aria-hidden="true"></i> {% trans "Start Timer" %}
             </a>
