Use short datetime string for lists (WIP)

--- a/core/templates/core/diaperchange_form.html
+++ b/core/templates/core/diaperchange_form.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load datetimepicker i18n %}
+{% load datetime i18n %}
 
 {% block title %}
     {% if request.resolver_match.url_name == 'diaperchange-update' %}
