--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load datetimepicker duration i18n %}
+{% load datetime duration i18n %}
 
 {% block title %}{% trans "Timer" %}{% endblock %}
 
