--- a/core/templates/core/sleep_list.html
+++ b/core/templates/core/sleep_list.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load bootstrap duration i18n widget_tweaks %}
+{% load bootstrap datetime duration i18n widget_tweaks %}
 
 {% block title %}{% trans "Sleep" %}{% endblock %}
 
@@ -33,8 +33,8 @@
                 {% for sleep in object_list %}
                     {% cycle "odd" "even" as row_class silent %}
                     <tr class="{{ row_class }}">
-                        <th scope="row">{{ sleep.start }}</th>
-                        <td>{{ sleep.end }}</td>
+                        <th scope="row">{{ sleep.start|datetime_short }}</th>
+                        <td>{{ sleep.end|datetime_short }}</td>
                         <td><a href="{% url 'core:child' sleep.child.slug %}">{{ sleep.child }}</a></td>
                         <td>{{ sleep.duration|duration_string }}</td>
                         <td class="text-center">{{ sleep.nap|bool_icon }}</td>
