--- a/core/templates/core/temperature_list.html
+++ b/core/templates/core/temperature_list.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n widget_tweaks %}
+{% load datetime i18n widget_tweaks %}
 
 {% block title %}{% trans "Temperature" %}{% endblock %}
 
@@ -31,7 +31,7 @@
                 {% for temperature in object_list %}
                     {% cycle "odd" "even" as row_class silent %}
                     <tr class="{{ row_class }}">
-                        <th scope="row">{{ temperature.time }}</th>
+                        <th scope="row">{{ temperature.time|datetime_short }}</th>
                         <td><a href="{% url 'core:child' temperature.child.slug %}">{{ temperature.child }}</a></td>
                         <td>{{ temperature.temperature }}</td>
                         <td class="text-center">
