--- a/core/templates/core/temperature_list.html
+++ b/core/templates/core/temperature_list.html
@@ -22,7 +22,9 @@
             <thead class="thead-inverse">
                 <tr>
                     <th>{% trans "Time" %}</th>
-                    <th>{% trans "Child" %}</th>
+                    {% if not unique_child %}
+                        <th>{% trans "Child" %}</th>
+                    {% endif %}
                     <th>{% trans "Temperature" %}</th>
                     <th class="text-center">{% trans "Actions" %}</th>
                 </tr>
@@ -32,7 +34,9 @@
                     {% cycle "odd" "even" as row_class silent %}
                     <tr class="{{ row_class }}">
                         <th scope="row">{{ temperature.time|datetime_short }}</th>
-                        <td><a href="{% url 'core:child' temperature.child.slug %}">{{ temperature.child }}</a></td>
+                        {% if not unique_child %}
+                            <td><a href="{% url 'core:child' temperature.child.slug %}">{{ temperature.child }}</a></td>
+                        {% endif %}
                         <td>{{ temperature.temperature }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
