--- a/core/templates/core/timer_list.html
+++ b/core/templates/core/timer_list.html
@@ -23,7 +23,9 @@
             <tr>
                 <th>{% trans "Start" %}</th>
                 <th>{% trans "Name" %}</th>
-                <th>{% trans "Child" %}</th>
+                {% if not unique_child %}
+                    <th>{% trans "Child" %}</th>
+                {% endif %}
                 <th>{% trans "Duration" %}</th>
                 <th>{% trans "End" %}</th>
                 <th>{% trans "Active" %}</th>
@@ -35,11 +37,13 @@
                 <tr>
                     <th scope="row">{{ timer.start|datetime_short }}</th>
                     <td><a href="{% url 'core:timer-detail' timer.id %}">{{ timer }}</a></td>
-                    <td>
-                        {% if timer.child %}
-                            <a href="{% url 'core:child' timer.child.slug %}">{{ timer.child }}</a>
-                        {% endif %}
-                    </td>
+                    {% if not unique_child %}
+                        <td>
+                            {% if timer.child %}
+                                <a href="{% url 'core:child' timer.child.slug %}">{{ timer.child }}</a>
+                            {% endif %}
+                        </td>
+                    {% endif %}
                     <td>{{ timer.duration|duration_string }}</td>
                     <td>
                         {% if timer.end %}
